--- a/login.html
+++ b/login.html
@@ -12,6 +12,73 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav>
+      <header>
+        <div class="bar"></div>
+        <div class="user">
+          <img src="/Tarea1/imagenes/yop.JPG" alt="" height="140px" width="180"/>
+          <div class="name">Stephani Rivera</div>
+        </div>
+      </header>
+
+      <div class="links">
+        <a href="#">
+          <div class="icon">
+            <span
+              class="iconify"
+              data-icon="flat-color-icons:assistant"
+              data-width="32"
+              data-height="32"
+            ></span>
+          </div>
+          <div class="title">Asistencia</div>
+        </a>
+        <a href="#">
+          <div class="icon">
+            <span
+              class="iconify"
+              data-icon="flat-color-icons:calendar"
+              data-width="32"
+              data-height="32"
+            ></span>
+          </div>
+          <div class="title">Calendario</div>
+        </a>
+        <a href="#">
+          <div class="icon">
+            <span
+              class="iconify"
+              data-icon="flat-color-icons:automatic"
+              data-width="32"
+              data-height="32"
+            ></span>
+          </div>
+          <div class="title">Configuracion</div>
+        </a>
+        <a href="#">
+          <div class="icon">
+            <span
+              class="iconify"
+              data-icon="flat-color-icons:bearish"
+              data-width="32"
+              data-height="32"
+            ></span>
+          </div>
+          <div class="title">Estadisticas</div>
+        </a>
+        <a href="#">
+          <div class="icon">
+            <span
+              class="iconify"
+              data-icon="flat-color-icons:compact-camera"
+              data-width="32"
+              data-height="32"
+            ></span>
+          </div>
+          <div class="title">Respaldos</div>
+        </a>
+      </div>
+    </nav>
     <div class="form-container">
       <div class="login-container">
         <h2 style="font-family: 'Times New Roman', Times, serif;">MAGIC BEAUTY</h2>
