--- a/acercaDe.html
+++ b/acercaDe.html
@@ -274,38 +274,7 @@
                         style="color: palevioletred;"></i></button>
                 </div>
             </div>
-            <script>
-                function mostrar() {
-                    document.getElementById('misionM').style.display = 'block';
-                }
-                function ocultar() {
-                    document.getElementById('misionM').style.display = 'none';
-                }
-                function mostrar2() {
-                    document.getElementById('visionM').style.display = 'block';
-                }
-                function ocultar2() {
-                    document.getElementById('visionM').style.display = 'none';
-                }
-                function mostrar3() {
-                    document.getElementById('historiaM').style.display = 'block';
-                }
-                function ocultar3() {
-                    document.getElementById('historiaM').style.display = 'none';
-                }
-                function mostrar4() {
-                    document.getElementById('recursosM').style.display = 'block';
-                }
-                function ocultar4() {
-                    document.getElementById('recursosM').style.display = 'none';
-                }
-                function mostrar5() {
-                    document.getElementById('preciosM').style.display = 'block';
-                }
-                function ocultar5() {
-                    document.getElementById('preciosM').style.display = 'none';
-                }
-            </script>
+            <script href="./acercaDe.js"></script>
         </section>
     </main>
     <footer>
