--- a/contacto.html
+++ b/contacto.html
@@ -382,20 +382,7 @@
                             style="color: palevioletred;"></i></button>
                 </div>
             </div>
-            <script>
-                function mostrar() {
-                    document.getElementById('formularioM').style.display = 'block';
-                }
-                function ocultar() {
-                    document.getElementById('formularioM').style.display = 'none';
-                }
-                function mostrar2() {
-                    document.getElementById('informacionM').style.display = 'block';
-                }
-                function ocultar2() {
-                    document.getElementById('informacionM').style.display = 'none';
-                }
-            </script>
+            <script href="./contacto.js"></script>
         </main>
     </section>
     <section class="seccion2">
