--- a/servicios.html
+++ b/servicios.html
@@ -434,14 +434,7 @@
                     </div>
                     </div>
         </section>
-        <script>
-            function mostrar(){
-                document.getElementById('tintesM').style.display = 'block'; 
-            }
-            function ocultar(){
-                document.getElementById('tintesM').style.display = 'none'; 
-            }
-        </script>
+        <script href="./servicios.js"></script>
         <section>
             <h3>Nuestros clientes:</h3>
              <div class="chat-container">
