--- a/sucursal.html
+++ b/sucursal.html
@@ -544,20 +544,6 @@
         </section>
     </footer>
 </body>
-<script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const progressValue = document.getElementById('progressValue');
-        let percent = 0;
-
-        const intervalId = setInterval(() => {
-            percent += 5;
-            if (percent <= 80) {
-                progressValue.textContent = `${percent}%`;
-            } else {
-                clearInterval(intervalId);
-            }
-        }, 500);
-    });
-</script>
+<script href="./sucursales.js"></script>
 
 </html>
