--- a/login.html
+++ b/login.html
@@ -118,24 +118,7 @@
       <div class="welcome-screen-container">
         <img src="../Tarea1/imagen login/3.jpg" height="700" width="600"> 
       </div>
-      <script>
-        function validateForm(event) {
-          event.preventDefault();
-  
-          // Obtener valores del formulario
-          var username = document.forms["loginForm"]["username"].value;
-          var password = document.forms["loginForm"]["password"].value;
-  
-          // Validar usuario y contraseña
-          if (username === "Admin" && password === "12345") {
-            // Redirigir a otra página si la validación es exitosa
-            window.location.href = "index.html";
-          } else {
-            // Mostrar mensaje de error
-            alert("Usuario o contraseña incorrecto");
-          }
-        }
-      </script>
+      <script href="login.js"></script>
     </div>
   </body>
 </html>
