--- a/contacto.html
+++ b/contacto.html
@@ -10,7 +10,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../Tarea1/imagenes/favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./imagenes/favicon.jpg" type="image/x-icon">
     <style>
       
         #formularioM {
@@ -260,7 +260,7 @@
                             style="color: palevioletred"></i> PRODUCTOS</a></button></h1>
             <h2 class="h22">Bienvenida al lugar de tus sueños</h2>
             <div class="icon">
-                <img src="../Tarea1/imagenes/favicon.jpg" width="100" height="100">
+                <img src="./imagenes/favicon.jpg" width="100" height="100">
             </div>
             <nav>
                 <ul>
@@ -680,14 +680,15 @@
         <section>
             <h2>Siguenos en Redes Sociales</h2>
             <div class="imgg">
-            <a href="https://www.instagram.com/stephi.rivera/" target="_blank"><img src="../Tarea1/imagenes/insta.jpg"
+            <a href="https://www.instagram.com/stephi.rivera/" target="_blank"><img src="./imagenes/insta.jpg"
                     height="100" width="100"><h4>INSTAGRAM</h4></a>
                 <a href="https://www.facebook.com/stefyyyyyyyyiiii" target="_blank"><img
-                        src="../Tarea1/imagenes/face.jpg" height="100" width="100"><h4>FACEBOOK</h4></a>
+                        src="./imagenes/face.jpg" height="100" width="100"><h4>FACEBOOK</h4></a>
             </div>
             <br>
             <div class="piePagina"><i class="fa-solid fa-copyright" style="color:black;"></i>Copy Right</div>
         </section>
     </footer>
+    <script src="./js/contacto.js"></script>
 </body>
 </html>
