--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                             style="color: palevioletred"></i> PRODUCTOS</a></button></h1>
             <h2 class="h22">Bienvenida al lugar de tus sueños</h2>
             <div class="icon">
-                <img src="../Tarea1/imagenes/favicon.jpg" width="100" height="100">
+                <img src="./imagenes/favicon.jpg" width="100" height="100">
             </div>
             <nav>
                 <ul>
@@ -398,40 +398,40 @@
             <div id="conteItemsCarrusel">
                 <div class="itemCarrusel" id="itemCarrusel-1">
                     <div class="tarjetaCarrusel" id="tarjetaCarrusel-1">
-                        <img src="../Tarea1/imagenes/uñasssss.png" alt="Cortes">
+                        <img src="./imagenes/uñasssss.png" alt="Cortes">
                     </div>
                     <div class="flechasCarrusel">
                         <a href="#itemCarrusel-3">
-                            <img src="../Tarea1/imagenes/izquierda.png" height="50" width="50">
+                            <img src="./imagenes/izquierda.png" height="50" width="50">
                         </a>
                         <a href="#itemCarrusel-2">
-                            <img src="../Tarea1/imagenes/derecha.png" height="50" width="50">
+                            <img src="./imagenes/derecha.png" height="50" width="50">
                         </a>
                     </div>
                 </div>
                 <div class="itemCarrusel" id="itemCarrusel-2">
                     <div class="tarjetaCarrusel" id="tarjetaCarrusel-2">
-                        <img src="../Tarea1/imagenes/cortesss.png" alt="Uñas">
+                        <img src="./imagenes/cortesss.png" alt="Uñas">
                     </div>
                     <div class="flechasCarrusel">
                         <a href="#itemCarrusel-1">
-                            <img src="../Tarea1/imagenes/izquierda.png" height="50" width="50">
+                            <img src="./imagenes/izquierda.png" height="50" width="50">
                         </a>
                         <a href="#itemCarrusel-3">
-                            <img src="../Tarea1/imagenes/derecha.png" height="50" width="50">
+                            <img src="./imagenes/derecha.png" height="50" width="50">
                         </a>
                     </div>
                 </div>
                 <div class="itemCarrusel" id="itemCarrusel-3">
                     <div class="tarjetaCarrusel" id="tarjetaCarrusel-3">
-                        <img src="../Tarea1/imagenes/peinadosss.png" alt="Peinados">
+                        <img src="./imagenes/peinadosss.png" alt="Peinados">
                     </div>
                     <div class="flechasCarrusel">
                         <a href="#itemCarrusel-2">
-                            <img src="../Tarea1/imagenes/izquierda.png" height="50" width="50">
+                            <img src="./imagenes/izquierda.png" height="50" width="50">
                         </a>
                         <a href="#itemCarrusel-1">
-                            <img src="../Tarea1/imagenes/derecha.png" height="50" width="50">
+                            <img src="./imagenes/derecha.png" height="50" width="50">
                         </a>
                     </div>
                 </div>
@@ -540,19 +540,19 @@
                     <h3>En uñas, peinados y cortes</h3>
                     <div class="cards">
                         <div class="card">
-                            <a href="./servicios.html"><img src="../Tarea1/imagenes/uñas.jpg" height="300"
+                            <a href="./servicios.html"><img src="./imagenes/uñas.jpg" height="300"
                                     width="200"></a>
                         </div>
                         <div class="card element-1">
-                            <a href="./servicios.html"><img src="../Tarea1/imagenes/uñas2.jpg" height="300"
+                            <a href="./servicios.html"><img src="./imagenes/uñas2.jpg" height="300"
                                     width="200"></a>
                         </div>
                         <div class="card element-2">
-                            <a href="./servicios.html"><img src="../Tarea1/imagenes/peinado1.jpg" height="300"
+                            <a href="./servicios.html"><img src="./imagenes/peinado1.jpg" height="300"
                                     width="200"></a>
                         </div>
                         <div class="card element-3">
-                            <a href="./servicios.html"><img src="../Tarea1/imagenes/peinado2.jpg" height="300"
+                            <a href="./servicios.html"><img src="./imagenes/peinado2.jpg" height="300"
                                     width="200"></a>
                         </div>
                     </div>
@@ -704,11 +704,11 @@
             <h2>Siguenos en Redes Sociales</h2>
             <div class="imgg">
                 <a href="https://www.instagram.com/stephi.rivera/" target="_blank"><img
-                        src="../Tarea1/imagenes/insta.jpg" height="100" width="100">
+                        src="./imagenes/insta.jpg" height="100" width="100">
                     <h4>INSTAGRAM</h4>
                 </a>
                 <a href="https://www.facebook.com/stefyyyyyyyyiiii" target="_blank"><img
-                        src="../Tarea1/imagenes/face.jpg" height="100" width="100">
+                        src="./imagenes/face.jpg" height="100" width="100">
                     <h4>FACEBOOK</h4>
                 </a>
             </div>
@@ -716,7 +716,7 @@
             <div class="piePagina"><i class="fa-solid fa-copyright" style="color:black;"></i>Copy Right</div>
         </section>
     </footer>
-    <script src="./index.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
