--- a/acercaDe.html
+++ b/acercaDe.html
@@ -10,7 +10,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../Tarea1/imagenes/favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./imagenes/favicon.jpg" type="image/x-icon">
     <style>
         #misionM {
             display: none;
@@ -98,7 +98,7 @@
                             style="color: palevioletred"></i> PRODUCTOS</a></button></h1>
             <h2 class="h22">Bienvenida al lugar de tus sueños</h2>
             <div class="icon">
-                <img src="../Tarea1/imagenes/favicon.jpg" width="100" height="100">
+                <img src="./imagenes/favicon.jpg" width="100" height="100">
             </div>
             <nav>
                 <ul>
@@ -274,7 +274,6 @@
                         style="color: palevioletred;"></i></button>
                 </div>
             </div>
-            <script href="./acercaDe.js"></script>
         </section>
     </main>
     <footer>
@@ -282,11 +281,11 @@
             <h2>Siguenos en Redes Sociales</h2>
             <div class="imgg">
                 <a href="https://www.instagram.com/stephi.rivera/" target="_blank"><img
-                        src="../Tarea1/imagenes/insta.jpg" height="100" width="100">
+                        src="./imagenes/insta.jpg" height="100" width="100">
                     <h4>INSTAGRAM</h4>
                 </a>
                 <a href="https://www.facebook.com/stefyyyyyyyyiiii" target="_blank"><img
-                        src="../Tarea1/imagenes/face.jpg" height="100" width="100">
+                        src="./imagenes/face.jpg" height="100" width="100">
                     <h4>FACEBOOK</h4>
                 </a>
             </div>
@@ -294,6 +293,7 @@
             <div class="piePagina"><i class="fa-solid fa-copyright" style="color:black;"></i>Copy Right</div>
         </section>
     </footer>
+    <script src="./js/acercaDe.js"></script>
 </body>
 
 </html>
