--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
       <header>
         <div class="bar"></div>
         <div class="user">
-          <img src="/Tarea1/imagenes/yop.JPG" alt="" height="140px" width="180"/>
+          <img src="./imagenes/yop.JPG" alt="" height="140px" width="180"/>
           <div class="name">Stephani Rivera</div>
         </div>
       </header>
@@ -109,16 +109,16 @@
           </p>
           <div class="providers">
             <span style="font-family: 'Times New Roman', Times, serif;">Registrarse con</span>
-            <button style="font-family: 'Times New Roman', Times, serif;" class="btn google-provider"><img src="../Tarea1/imagen login/google.jpg" height="20" width="20">Google</button>
-            <button style="font-family: 'Times New Roman', Times, serif;" class="btn facebook-provider"><img src="../Tarea1/imagen login/facebook22.jpg" height="20" width="20">Facebook</button>
-            <button style="font-family: 'Times New Roman', Times, serif;" class="btn twitter-provider"><img src="../Tarea1/imagen login/x.jpg" height="20" width="20">Twitter</button>
+            <button style="font-family: 'Times New Roman', Times, serif;" class="btn google-provider"><img src="./imagen login/google.jpg" height="20" width="20">Google</button>
+            <button style="font-family: 'Times New Roman', Times, serif;" class="btn facebook-provider"><img src="./imagen login/facebook22.jpg" height="20" width="20">Facebook</button>
+            <button style="font-family: 'Times New Roman', Times, serif;" class="btn twitter-provider"><img src="./imagen login/x.jpg" height="20" width="20">Twitter</button>
           </div>
         </form>
       </div>
       <div class="welcome-screen-container">
-        <img src="../Tarea1/imagen login/3.jpg" height="700" width="600"> 
+        <img src="./imagen login/3.jpg" height="700" width="600"> 
       </div>
-      <script href="login.js"></script>
+      <script src="./js/login.js"></script>
     </div>
   </body>
 </html>
