--- a/sucursal.html
+++ b/sucursal.html
@@ -13,7 +13,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="../Tarea1/imagenes/favicon.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="./imagenes/favicon.jpg" type="image/x-icon">
 
     <style>
         
@@ -120,9 +120,6 @@
 }
 .upload-container .drag-drop .btn:hover {
   background-color: #3c6dc0;
-}
-
-.upload-container .uploaded-files {
 }
 
 .upload-container .title-section {
@@ -376,7 +373,7 @@
                             style="color: palevioletred"></i> PRODUCTOS</a></button></h1>
             <h2 class="h22">Bienvenida al lugar de tus sueños</h2>
             <div class="icon">
-                <img src="../Tarea1/imagenes/favicon.jpg" width="100" height="100">
+                <img src="./imagenes/favicon.jpg" width="100" height="100">
             </div>
             <nav>
                 <ul>
@@ -502,7 +499,7 @@
                 </div>
             </div>
         </section>
-        <center>
+    <center>
         <section>
             <div class="modal-container">
                 <div class="modal">
@@ -531,11 +528,11 @@
             <h2>Siguenos en Redes Sociales</h2>
             <div class="imgg">
                 <a href="https://www.instagram.com/stephi.rivera/" target="_blank"><img
-                        src="../Tarea1/imagenes/insta.jpg" height="100" width="100">
+                        src="./imagenes/insta.jpg" height="100" width="100">
                     <h4>INSTAGRAM</h4>
                 </a>
                 <a href="https://www.facebook.com/stefyyyyyyyyiiii" target="_blank"><img
-                        src="../Tarea1/imagenes/face.jpg" height="100" width="100">
+                        src="./imagenes/face.jpg" height="100" width="100">
                     <h4>FACEBOOK</h4>
                 </a>
             </div>
@@ -544,6 +541,6 @@
         </section>
     </footer>
 </body>
-<script href="./sucursales.js"></script>
+<script src="./js/sucursales.js"></script>
 
 </html>
