--- a/servicios.html
+++ b/servicios.html
@@ -449,7 +449,7 @@
             <h3>Atención personalizada</h3>
             <div class="chatbot">
                 <P>¿Necesitas ayuda presiona aquí?</P>
-                <button class="botonChat"><a href="./chatbot/index.php">ASISTENTE VIRTUAL</a></button>
+                <button class="botonChat"><a href="./chatbot/index.php?usr=Usuario1">ASISTENTE VIRTUAL</a></button>
             </div>
             </section>
               
