--- a/contacto.html
+++ b/contacto.html
@@ -138,7 +138,7 @@
   <section>
     <main>
       <div class="formulario">
-        <h3>Formulario de citas <button id="botonmas" onclick="mostrar();"><i class="fa-solid fa-plus"
+        <h3>Agenda tu cita aquí <button id="botonmas" onclick="mostrar();"><i class="fa-solid fa-plus"
               style="color: palevioletred;"></i></button> </h3>
         <div id="formularioM">
           <div>
