--- a/index.html
+++ b/index.html
@@ -184,6 +184,19 @@
             top: 20px;
             left: -5px;
           }
+          @media screen and (max-width: 768px) {
+            .price-table-container {
+                width: 100%;
+                flex-direction: column;
+                align-items: center;
+            }
+            .price-table-container .table {
+                width: 90%;
+            }
+            .price-table-container .table.recommended {
+                height: auto;
+            }
+        }        
           
           @keyframes ring {
             0% {
@@ -382,7 +395,12 @@
             background-color: palevioletred;
             color: white;
             border: solid 1px palevioletred;
-          }        
+          } 
+          .esquina-superior-derecha {
+            margin-top: 10px;
+            margin-right: 10px;
+        }
+        
     </style>
 </head>
 
