--- a/login.html
+++ b/login.html
@@ -16,8 +16,8 @@
       <header>
         <div class="bar"></div>
         <div class="user">
-          <img src="./imagenes/yop.JPG" alt="" height="140px" width="180"/>
-          <div class="name">Stephani Rivera</div>
+          <img src="./imagen login/Imagen de WhatsApp 2024-01-10 a las 18.13.21_9b6b3820.jpg" alt="" height="140px" width="180"/>
+          <div class="name">Cookie3000</div>
         </div>
       </header>
 
@@ -109,9 +109,9 @@
           </p>
           <div class="providers">
             <span style="font-family: 'Times New Roman', Times, serif;">Registrarse con</span>
-            <button style="font-family: 'Times New Roman', Times, serif;" class="btn google-provider"><img src="./imagen login/google.jpg" height="20" width="20">Google</button>
-            <button style="font-family: 'Times New Roman', Times, serif;" class="btn facebook-provider"><img src="./imagen login/facebook22.jpg" height="20" width="20">Facebook</button>
-            <button style="font-family: 'Times New Roman', Times, serif;" class="btn twitter-provider"><img src="./imagen login/x.jpg" height="20" width="20">Twitter</button>
+            <button style="font-family: 'Times New Roman', Times, serif;" class="btn google-provider"><img src="./imagen login/google.jpg" height="20" width="20"> <a href="https://accounts.google.com/">Google</a></button>
+            <button style="font-family: 'Times New Roman', Times, serif;" class="btn facebook-provider"><img src="./imagen login/facebook22.jpg" height="20" width="20"><a href="https://www.facebook.com/">Facebook</a></button>
+            <button style="font-family: 'Times New Roman', Times, serif;" class="btn twitter-provider"><img src="./imagen login/x.jpg" height="20" width="20"><a href="https://twitter.com/i/flow/login">Twitter</a></button>
           </div>
         </form>
       </div>
