--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
       display: flex;
       width: 130%;
       padding: 50px;
+      flex-direction: column;
     }
 
     .card {
@@ -97,7 +98,6 @@
           rgb(233, 193, 207) 1%,
           rgb(240, 166, 193)100%);
       color: white;
-      width: 16%;
       height: 10%;
       border-radius: 10px;
       padding: 30px;
@@ -105,11 +105,14 @@
       position: relative;
       display: flex;
       flex-direction: column;
+      width: 100%;
+      margin-bottom: 20px;
 
       box-shadow: -3px 0 10px rgba(0, 0, 0, 0.3), -4px 0 10px rgba(0, 0, 0, 0.2),
         -5px 0 10px rgba(0, 0, 0, 0.1);
 
       transition: all 0.3s ease;
+      
     }
 
     .card a:hover {
