--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
       display: flex;
       width: 130%;
       padding: 50px;
-      flex-direction: column;
     }
 
     .card {
@@ -192,6 +191,9 @@
       .card {
         width: 100%;
         margin-bottom: 20px;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
       }
 
       .cards {
